[metadata]
name = sdxbenchmark
version = 0.0.1
author = Yifei Wang
author_email = ywang13@renci.org
description = Benchmark for the Heuristic method and Solver on computing the shortest path of a network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yifei666/pce.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
