[aliases]
test = pytest

[tool:pytest]
addopts = --cov --cov-report html --cov-report term-missing
[metadata]
name = LoadBalancing
version = 0.0.1
author = Yifei Wang
author_email = ywang13@renci.org
description = Heuristic and Optimal Algorithms for CSP and TE Computation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atlanticwave-sdx/pce
project_urls =
    Bug Tracker = https://github.com/atlanticwave-sdx/pce/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
packages=setuptools.find_packages(where='./src'),
package_dir={
    '': 'src'},
include_package_data=True,
setup_requires=(
    'pytest-runner',),
tests_require=(
    'pytest-cov',),